# tree-sitter-koka

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.helix/: languages.toml
bindings/c/: tree-sitter-koka.h  tree-sitter-koka.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_koka/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKokaTests/: TreeSitterKokaTests.swift
queries/: highlights.scm  indents.scm  locals.scm
src/: .gitattributes  grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: corpus.txt
test/highlight/: braces1.kk  effect.kk  fun-param.kk  infix.kk  trailing1.kk  type.kk  type1.kk
